# data-crawler-python

./: .gitmodules  Pipfile  README.md  main.py  pyproject.toml  requirements.txt  trends.json  update.sh
.github/workflows/: update.yml
models/: article.py  trend.py
ref/: except.txt
src/: __init__.py  crawl.py  trendjson.py
