[tool.poetry]
name = "realtime-trends-updater"
version = "0.1.0"
description = ""
authors = ["Changho Park <hoya.develop@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
bs4 = "^0.0.1"
lxml = "^4.8.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
